{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 16,
  "lineage": "65d5161d-8fe9-6727-041d-8ffd3b903f90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_pip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "172.16.10.100",
            "association_id": "eipassoc-096358d5da77f70a5",
            "domain": "vpc",
            "id": "eipalloc-01ea60604239782f2",
            "instance": "i-09433ef0c0114eef9",
            "network_interface": "eni-0f4d42309e7bc83f0",
            "private_dns": "ip-172-16-10-100.ec2.internal",
            "private_ip": "172.16.10.100",
            "public_dns": "ec2-34-232-74-238.compute-1.amazonaws.com",
            "public_ip": "34.232.74.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_internet_gateway.gw",
            "aws_key_pair.ec2_key",
            "aws_network_interface.my_network_interface",
            "aws_security_group.allow_tls",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:449143996953:instance/i-09433ef0c0114eef9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09433ef0c0114eef9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f4d42309e7bc83f0"
              }
            ],
            "primary_network_interface_id": "eni-0f4d42309e7bc83f0",
            "private_dns": "ip-172-16-10-100.ec2.internal",
            "private_ip": "172.16.10.100",
            "public_ip": "34.232.74.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0177d4b6766478370",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087f73ee7096adef0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0849edf3e25088707"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_network_interface.my_network_interface",
            "aws_security_group.allow_tls",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:internet-gateway/igw-0d1e1a8ab3e0547b3",
            "id": "igw-0d1e1a8ab3e0547b3",
            "owner_id": "449143996953",
            "vpc_id": "vpc-0f3b3b52f9341803a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b881d06ab74ab97d",
            "original_route_table_id": "rtb-03d2555a30e0b13b1",
            "route_table_id": "rtb-076c028cfd627d60e",
            "vpc_id": "vpc-0f3b3b52f9341803a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.my_route_table",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network_interface",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-09136559954f244b9",
                "device_index": 0,
                "instance": "i-09433ef0c0114eef9"
              }
            ],
            "id": "eni-0f4d42309e7bc83f0",
            "mac_address": "0a:75:84:1b:6f:43",
            "private_ip": "172.16.10.100",
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0849edf3e25088707"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087f73ee7096adef0",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076c028cfd627d60e",
            "owner_id": "449143996953",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1e1a8ab3e0547b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vpc_id": "vpc-0f3b3b52f9341803a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:security-group/sg-0849edf3e25088707",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0849edf3e25088707",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL/Aurora from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "449143996953",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b3b52f9341803a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:subnet/subnet-087f73ee7096adef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-087f73ee7096adef0",
            "map_public_ip_on_launch": false,
            "owner_id": "449143996953",
            "tags": {
              "environment": "dev"
            },
            "vpc_id": "vpc-0f3b3b52f9341803a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:vpc/vpc-0f3b3b52f9341803a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-004050922b89e0bd7",
            "default_route_table_id": "rtb-076c028cfd627d60e",
            "default_security_group_id": "sg-0ccdebebbbb919cf0",
            "dhcp_options_id": "dopt-e7c7549d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f3b3b52f9341803a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-076c028cfd627d60e",
            "owner_id": "449143996953",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}